tests/should-fail/rawcodelit-2.j
globals
    integer f = 'a\\bc'
endglobals